tests/compile_fail/not_allowed_on_unions.stderr
error: `#[sort_fields]` is not allowed on unions, only structs
 --> $DIR/not_allowed_on_unions.rs:4:5
  |
4 | pub union Thing {
  |     ^^^^^
